--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ license = "MIT"
 keywords = ["stepmania", "simfile", "parser", "rust", "rssp"]
 
 [dependencies]
+clap = { version = "4.5.20", features = ["derive"] }
 hex = "0.4.3"
 lazy_static = "1.5.0"
-serde = { version = "1.0.132", features = ["derive"] }
+serde = "1.0.214"
 serde_json = "1.0.132"
 sha1 = "0.10.6"
 regex = "1.7.3"
