chore: Clean up Cargo description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rssp"
 version = "0.2.16"
 edition = "2021"
 authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
-description = "A high-performance simfile parser for StepMania built in Rust."
+description = "A high-performance simfile parser for StepMania."
 repository = "https://github.com/pnn64/rssp"
 license = "MIT"
 keywords = ["stepmania", "simfile", "parser", "rust", "rssp"]
