refactor(report): add serde dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssp"
-version = "0.2.166"
+version = "0.2.168"
 edition = "2024"
 authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
 description = "A high-performance simfile parser for StepMania."
@@ -11,6 +11,7 @@ keywords = ["stepmania", "simfile", "parser", "rust", "rssp"]
 [dependencies]
 png = "0.18.0"
 sha1 = { version = "0.10.6", default-features = false }
+serde_json = { version = "1.0.145", features = ["preserve_order"] }
 
 [profile.bench]
 debug = true
