--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,17 @@ png = "0.18.0"
 sha1 = { version = "0.10.6", default-features = false }
 serde_json = { version = "1.0.145", features = ["preserve_order"] }
 
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+walkdir = "2"
+md5 = "0.7"
+libtest-mimic = "0.7"
+
+[[test]]
+name = "hash_parity"
+path = "tests/hash_parity.rs"
+harness = false
+
 [profile.bench]
 debug = true
