--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ serde_json = { version = "1.0.145", features = ["preserve_order"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 walkdir = "2"
-md5 = "0.7"
-libtest-mimic = "0.7"
+md5 = "0.8.0"
+libtest-mimic = "0.8.1"
+zstd = "0.13.3"
 
 [[test]]
 name = "hash_parity"
