--- a/.github/workflows/parity.yml
+++ b/.github/workflows/parity.yml
@@ -15,6 +15,11 @@ jobs:
     runs-on: self-hosted 
 
     steps:
+    - name: Set up Rust
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        toolchain: stable
+    
     - name: Checkout code
       uses: actions/checkout@v4
       with:
