tests: add parity test for nps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,11 @@ name = "duration_parity"
 path = "tests/duration_parity.rs"
 harness = false
 
+[[test]]
+name = "nps_parity"
+path = "tests/nps_parity.rs"
+harness = false
+
 [[bench]]
 name = "hash_perf"
 harness = false
