bench: add perf test for mono

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,5 +66,9 @@ harness = false
 name = "hash_perf"
 harness = false
 
+[[bench]]
+name = "mono_perf"
+harness = false
+
 [profile.bench]
 debug = true
