--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,5 +83,9 @@ harness = false
 name = "step_counts_perf"
 harness = false
 
+[[bench]]
+name = "duration_perf"
+harness = false
+
 [profile.bench]
 debug = true
