--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,10 @@ name = "step_counts_perf"
 harness = false
 
 [[bench]]
+name = "tech_counts_perf"
+harness = false
+
+[[bench]]
 name = "duration_perf"
 harness = false
 
