tests: add breakdown test to Cargo and GH actions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,11 @@ path = "tests/timing_parity.rs"
 harness = false
 
 [[test]]
+name = "breakdown_parity"
+path = "tests/breakdown_parity.rs"
+harness = false
+
+[[test]]
 name = "rssp_unique_parity"
 path = "tests/rssp_unique_parity.rs"
 harness = false
