--- a/.github/workflows/parity.yml
+++ b/.github/workflows/parity.yml
@@ -13,6 +13,7 @@ on:
           - "all alternative"
           - hash_parity
           - bpm_parity
+          - breakdown_parity
           - metadata_parity
           - step_counts_parity
           - duration_parity
