--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,5 +100,9 @@ harness = false
 name = "nps_perf"
 harness = false
 
+[[bench]]
+name = "breakdown_perf"
+harness = false
+
 [profile.bench]
 debug = true
