chore: add breakdown test to GH actions

--- a/.github/workflows/parity.yml
+++ b/.github/workflows/parity.yml
@@ -18,6 +18,7 @@ on:
           - step_counts_parity
           - duration_parity
           - nps_parity
+          - breakdown_parity
           - tech_counts_parity
           - rssp_unique_parity
       pack_filter:
